=== 0.2.0 ===
2009-06-24  Olivier Bilodeau <olivier@bottomlesspit.org>

	* NEWS: [134] Updated NEWS

	* doc/user/README: Updated README for 0.2.0 and fixed a small error

2009-06-22  Olivier Bilodeau <olivier@bottomlesspit.org>

	* res/layout/main.xml,
	* res/layout/main_list_item.xml,
	* res/layout/note_view.xml: [129] Merged branch
	lp:~benoit.garret/tomdroid/ui-fixes. Fixes bug #364851;
	https://launchpad.net/bugs/364851 fixed

	2009-06-16  Benoit Garret <benoit.garret_launchpad@gadz.org>

		* res/layout/note_view.xml: [98.1.3] Add a 10dip padding around
		the note.

		* res/layout/main.xml,
		* res/layout/main_list_item.xml: [98.1.2] Make the whole item 
		area clickable and not just the text.

		* res/layout/main_list_item.xml: [98.1.1] Add a 10dip padding to
		the main list entries. This should help clicking them.

2009-06-22  Olivier Bilodeau <olivier@bottomlesspit.org>

	* AndroidManifest.xml: [127] Specifying minimum SDK version (Android
	1.0 for now) and bumped version to 0.2.0rc1

2009-06-21  Olivier Bilodeau <olivier@bottomlesspit.org>

	* res/values/strings.xml: [123] Updated opening warning Dialog's text.

	Removed lifecycle problems paragraph, added inability to edit notes
	and slow startup. Also asked for help.

	* src/org/tomdroid/NoteCollection.java: [120] NoteCollection's
	findNoteFromTitle(...) and buildNoteLinkifyPattern(...) are now
	synchronized methods. Fixes bug #389437: Concurrency crash;
	https://launchpad.net/bugs/389437 fixed

	* src/org/tomdroid/xml/NoteHandler.java: [117] No last-change-date
	parsing.

	Provides performance improvement and we were not using it yet. Will be
	reactivated in the future.

2009-06-21  Olivier Bilodeau <olivier@bottomlesspit.org>

	* doc/dev/performance/benchmarks.txt: Modified.
	* doc/dev/threading-improvement: Renamed to doc/dev/performance.
	[116] Moved threading-improvement dev notes to performance.

	Since the threading-improvement branch as been merged and I now track